src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__checkstyle_debug_x_drops_debug_noise.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] You have 0 Checkstyle violations.
[INFO] BUILD SUCCESS
