src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__compile_map_liquibase_jooq_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] BUILD SUCCESS
[INFO] Total time:  40.052 s
