src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__compile_unknown_phase_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] BUILD FAILURE
[INFO] Total time:  0.244 s
[ERROR] Unknown lifecycle phase "build".
