src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__dep_tree_reactor_inline_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: out.text
---
[INFO] com.devskiller.skiller:skiller:pom:1.2-SNAPSHOT
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] com.devskiller.skiller:spring-common:jar:1.2-SNAPSHOT
[INFO] +- ma.glasnost.orika:orika-core:jar:1.5.2:compile
[INFO] +- org.projectlombok:lombok:jar:1.18.46:compile
[INFO] +- org.springframework:spring-context:jar:7.0.8:compile
[INFO] +- org.springframework:spring-tx:jar:7.0.8:compile
[INFO] +- org.springframework:spring-web:jar:7.0.8:compile
[INFO] +- jakarta.annotation:jakarta.annotation-api:jar:3.0.0:compile
[INFO] +- com.vdurmont:emoji-java:jar:5.1.1:compile
[INFO] +- com.google.guava:guava:jar:33.5.0-jre:compile
[INFO] +- com.fasterxml.jackson.core:jackson-databind:jar:2.21.4:compile
[INFO] +- org.assertj:assertj-core:jar:3.27.7:test
[INFO] +- org.apache.commons:commons-lang3:jar:3.13.0:compile
[INFO] +- com.github.growthbook:growthbook-sdk-java:jar:0.9.91:compile
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] com.devskiller.skiller:data:jar:1.2-SNAPSHOT
[INFO] +- org.postgresql:postgresql:jar:42.7.3:compile
[INFO] +- org.hibernate.orm:hibernate-processor:jar:7.4.1.Final:compile (optional)
[INFO] +- io.vavr:vavr:jar:0.10.4:compile
[INFO] +- org.redisson:redisson-hibernate-7:jar:4.6.1:compile
[INFO] +- com.devskiller.skiller:spring-common:jar:1.2-SNAPSHOT:compile
[INFO] +- org.apache.commons:commons-lang3:jar:3.13.0:compile
[INFO] +- jakarta.xml.bind:jakarta.xml.bind-api:jar:4.0.5:compile
[INFO] +- org.springframework.boot:spring-boot-starter-data-jpa:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-data-mongodb:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-validation:jar:4.1.0:compile
[INFO] +- com.zaxxer:HikariCP:jar:7.0.2:compile
[INFO] +- org.zeroturnaround:zt-zip:jar:1.16:compile
[INFO] +- io.codearte.jfairy:jfairy:jar:0.5.9:compile
[INFO] +- org.json:json:jar:20230618:compile
[INFO] +- com.vdurmont:emoji-java:jar:5.1.1:compile
[INFO] +- org.springframework.security:spring-security-config:jar:7.1.0:compile
[INFO] +- org.assertj:assertj-core:jar:3.27.7:test
[INFO] +- com.devskiller.friendly-id:friendly-id:jar:2.0.0-SNAPSHOT:test
[INFO] +- org.liquibase:liquibase-core:jar:4.25.0:test
[INFO] +- org.springframework.boot:spring-boot-starter-jooq:jar:4.1.0:compile
[INFO] +- org.jooq.pro:jooq:jar:3.20.9:compile
[INFO] +- org.jooq.pro:jooq-postgres-extensions:jar:3.20.9:compile
[INFO] +- org.testcontainers:testcontainers:jar:2.0.5:test
[INFO] +- org.testcontainers:testcontainers-junit-jupiter:jar:2.0.5:test
[INFO] +- org.testcontainers:testcontainers-postgresql:jar:2.0.5:test
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] com.devskiller.skiller:ml:jar:1.2-SNAPSHOT
[INFO] +- com.devskiller.skiller:data:jar:1.2-SNAPSHOT:compile
[INFO] +- org.nd4j:nd4j-native-platform:jar:1.0.0-M2.1:compile
[INFO] +- org.deeplearning4j:deeplearning4j-core:jar:1.0.0-M2.1:compile
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] com.devskiller.skiller:services:jar:1.2-SNAPSHOT
[INFO] +- com.devskiller.skiller:spring-common:jar:1.2-SNAPSHOT:compile
[INFO] +- com.devskiller:toolkit:jar:1.3-62:compile
[INFO] +- com.devskiller.friendly-id:friendly-id:jar:2.0.0-SNAPSHOT:compile
[INFO] +- com.devskiller.skiller:data:jar:1.2-SNAPSHOT:compile
[INFO] +- com.devskiller.skiller:ml:jar:1.2-SNAPSHOT:compile
[INFO] +- com.mailjet:mailjet-client:jar:5.2.4:compile
[INFO] +- org.apache.commons:commons-lang3:jar:3.13.0:compile
[INFO] +- org.apache.commons:commons-text:jar:1.10.0:compile
[INFO] +- commons-io:commons-io:jar:2.13.0:compile
[INFO] +- com.atlassian.jira:jira-rest-java-client-core:jar:5.2.4:compile
[INFO] +- io.atlassian.fugue:fugue:jar:4.7.2:provided
[INFO] +- net.sf.supercsv:super-csv:jar:2.4.0:compile
[INFO] +- com.github.spullara.mustache.java:compiler:jar:0.9.10:compile
[INFO] +- com.maxmind.geoip2:geoip2:jar:4.1.0:compile
[INFO] +- com.squareup.retrofit:retrofit:jar:1.9.0:compile
[INFO] +- com.squareup.retrofit:converter-jackson:jar:1.9.0:compile
[INFO] +- io.github.resilience4j:resilience4j-bulkhead:jar:2.4.0:compile
[INFO] +- org.apache.tika:tika-core:jar:2.9.0:compile
[INFO] +- org.apache.tika:tika-parsers-standard-package:jar:2.9.0:compile
[INFO] +- org.zeroturnaround:zt-zip:jar:1.16:compile
[INFO] +- org.springframework.boot:spring-boot-starter-cache:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-validation:jar:4.1.0:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-stream-rabbit:jar:5.0.2:compile
[INFO] +- com.google.cloud:spring-cloud-gcp-starter-pubsub:jar:8.0.4:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-openfeign:jar:5.0.2:compile
[INFO] +- io.github.openfeign:feign-gson:jar:12.5:compile
[INFO] +- io.github.openfeign:feign-okhttp:jar:12.5:compile
[INFO] +- com.squareup.okhttp3:logging-interceptor:jar:4.10.0:compile
[INFO] +- io.github.openfeign.form:feign-form:jar:3.8.0:compile
[INFO] +- io.github.openfeign:feign-jackson:jar:12.5:compile
[INFO] +- io.github.openfeign:feign-httpclient:jar:13.6.1:compile
[INFO] +- io.github.openfeign:feign-slf4j:jar:13.6.1:compile
[INFO] +- org.springframework.security:spring-security-oauth2-client:jar:7.1.0:compile
[INFO] +- org.springframework.security.oauth:spring-security-oauth2:jar:2.5.2.RELEASE:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-loadbalancer:jar:5.0.2:compile
[INFO] +- com.github.ben-manes.caffeine:caffeine:jar:3.1.8:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8:jar:5.0.2:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-loadbalancer:jar:5.0.2:compile
[INFO] +- io.micrometer:micrometer-registry-statsd:jar:1.17.0:compile
[INFO] +- com.google.cloud:google-cloud-storage:jar:2.68.0:compile
[INFO] +- com.google.cloud:google-cloud-storage-control:jar:2.68.0:compile
[INFO] +- com.twilio.sdk:twilio:jar:9.11.0:compile
[INFO] +- org.redisson:redisson-spring-boot-starter:jar:4.6.1:compile
[INFO] +- org.redisson:redisson-spring-cache:jar:4.6.1:compile
[INFO] +- org.springframework.integration:spring-integration-redis:jar:7.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-configuration-processor:jar:4.1.0:compile (optional)
[INFO] +- net.sourceforge.pmd:pmd-core:jar:6.27.0:compile
[INFO] +- com.networknt:json-schema-validator:jar:1.0.86:compile
[INFO] +- org.assertj:assertj-core:jar:3.27.7:test
[INFO] +- org.awaitility:awaitility:jar:4.2.0:test
[INFO] +- org.xmlunit:xmlunit-assertj:jar:2.9.1:test
[INFO] +- org.jxls:jxls:jar:3.0.0:compile
[INFO] +- org.jxls:jxls-poi:jar:3.0.0:compile
[INFO] +- org.apache.poi:poi:jar:5.2.3:compile
[INFO] +- com.devskiller:git-client:jar:1.3-5:compile
[INFO] +- org.eclipse.jgit:org.eclipse.jgit:jar:6.6.1.202309021850-r:compile
[INFO] +- com.devskiller.skiller:data:test-jar:tests:1.2-SNAPSHOT:test
[INFO] +- org.testcontainers:testcontainers-junit-jupiter:jar:2.0.5:test
[INFO] +- org.testcontainers:testcontainers-postgresql:jar:2.0.5:test
[INFO] +- org.testcontainers:testcontainers:jar:2.0.5:test
[INFO] +- org.liquibase:liquibase-core:jar:5.0.3:test
[INFO] +- org.springframework:spring-context-support:jar:7.0.8:compile
[INFO] +- org.springframework:spring-web:jar:7.0.8:compile
[INFO] +- org.springframework:spring-messaging:jar:7.0.8:compile
[INFO] +- org.springframework.boot:spring-boot-starter-mail:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-actuator:jar:4.1.0:compile
[INFO] +- org.springframework.retry:spring-retry:jar:2.0.13:compile
[INFO] +- org.springframework.ai:spring-ai-client-chat:jar:2.0.0:compile
[INFO] +- org.springframework.ai:spring-ai-openai:jar:2.0.0:compile
[INFO] +- org.springframework.cloud:spring-cloud-contract-wiremock:jar:5.0.3:test
[INFO] +- com.moparisthebest:junidecode:jar:0.1.1:compile
[INFO] +- com.hubspot.jinjava:jinjava:jar:2.8.3:compile
[INFO] +- com.j2html:j2html:jar:1.6.0:compile
[INFO] +- jakarta.validation:jakarta.validation-api:jar:3.1.1:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-contract-verifier:jar:5.0.3:test
[INFO] +- org.springframework.cloud:spring-cloud-starter-contract-stub-runner:jar:5.0.3:test
[INFO] +- com.fasterxml.jackson.datatype:jackson-datatype-jsr310:jar:2.21.4:compile
[INFO] +- io.vavr:vavr-jackson:jar:0.10.3:compile
[INFO] +- com.fasterxml.jackson.module:jackson-module-parameter-names:jar:2.21.4:compile
[INFO] +- com.devskiller:workspace-manager:jar:stubs:1.3-16:test
[INFO] +- org.springframework.cloud:spring-cloud-stream-test-binder:jar:5.0.2:test
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] com.devskiller.skiller:integrations:jar:1.2-SNAPSHOT
[INFO] +- com.devskiller.skiller:services:jar:1.2-SNAPSHOT:compile
[INFO] +- com.devskiller.skiller:data:jar:1.2-SNAPSHOT:compile
[INFO] +- org.springframework.boot:spring-boot-starter-web:jar:4.1.0:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter-openfeign:jar:5.0.2:compile
[INFO] +- com.fasterxml.jackson.datatype:jackson-datatype-jdk8:jar:2.21.4:compile
[INFO] +- org.springframework.boot:spring-boot-starter-validation:jar:4.1.0:compile
[INFO] +- org.springframework.security:spring-security-oauth2-jose:jar:7.1.0:compile
[INFO] +- com.google.apis:google-api-services-cloudcommerceprocurement:jar:v1-rev20240602-2.0.0:compile
[INFO] +- org.springframework.boot:spring-boot-restclient-test:jar:4.1.0:test
[INFO] +- org.springframework.cloud:spring-cloud-starter-contract-verifier:jar:5.0.3:test
[INFO] +- org.springframework.cloud:spring-cloud-starter-contract-stub-runner:jar:5.0.3:test
[INFO] +- com.chargebee:chargebee-java:jar:2.23.0:compile
[INFO] +- com.tngtech.archunit:archunit-junit5:jar:1.4.1:test
[INFO] +- com.devskiller.skiller:data:test-jar:tests:1.2-SNAPSHOT:test
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] com.devskiller.skiller:webapp:jar:1.2-SNAPSHOT
[INFO] +- com.zaxxer:HikariCP:jar:7.0.2:compile
[INFO] +- org.springframework.boot:spring-boot-starter-security:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-validation:jar:4.1.0:compile
[INFO] +- org.springframework.security:spring-security-oauth2-client:jar:7.1.0:compile
[INFO] +- org.springframework.security:spring-security-oauth2-jose:jar:7.1.0:compile
[INFO] +- org.springframework.security:spring-security-oauth2-resource-server:jar:7.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-hateoas:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-websocket:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-data-mongodb:jar:4.1.0:compile
[INFO] +- org.springframework.security:spring-security-crypto:jar:7.1.0:compile
[INFO] +- org.jasypt:jasypt:jar:1.9.3:compile
[INFO] +- com.nimbusds:oauth2-oidc-sdk:jar:10.14.2:compile
[INFO] +- jakarta.websocket:jakarta.websocket-api:jar:2.1.1:provided
[INFO] +- com.devskiller.skiller:data:jar:1.2-SNAPSHOT:compile
[INFO] +- com.devskiller.skiller:services:jar:1.2-SNAPSHOT:compile
[INFO] +- com.devskiller.skiller:integrations:jar:1.2-SNAPSHOT:compile
[INFO] +- com.fasterxml.jackson.datatype:jackson-datatype-jsr310:jar:2.21.4:compile
[INFO] +- com.fasterxml.jackson.datatype:jackson-datatype-guava:jar:2.15.2:compile
[INFO] +- io.atlassian.fugue:fugue:jar:4.7.2:compile
[INFO] +- org.modelmapper:modelmapper:jar:3.1.1:compile
[INFO] +- org.springframework.cloud:spring-cloud-starter:jar:5.0.2:compile
[INFO] +- com.datadoghq:dd-trace-api:jar:1.20.0:compile
[INFO] +- org.eclipse.jgit:org.eclipse.jgit:jar:6.6.1.202309021850-r:compile
[INFO] +- org.assertj:assertj-core:jar:3.27.7:test
[INFO] +- com.devskiller.skiller:data:test-jar:tests:1.2-SNAPSHOT:test
[INFO] +- org.springframework.cloud:spring-cloud-starter-contract-verifier:jar:5.0.3:test
[INFO] +- org.springframework.security:spring-security-test:jar:7.1.0:test
[INFO] +- org.springframework.boot:spring-boot-security-test:jar:4.1.0:test
[INFO] +- net.logstash.logback:logstash-logback-encoder:jar:9.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-test:jar:4.1.0:test
[INFO] +- org.mockito:mockito-core:jar:5.16.0:test
[INFO] +- org.mockito:mockito-junit-jupiter:jar:5.16.0:test
[INFO] +- org.jspecify:jspecify:jar:1.0.0:compile
[INFO] +- io.micrometer:micrometer-tracing-bridge-brave:jar:1.7.0:compile
[INFO] +- org.springframework.boot:spring-boot-jackson2:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-micrometer-tracing-brave:jar:4.1.0:compile
[INFO] +- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.1.0:test
[INFO] +- org.springframework.boot:spring-boot-jdbc-test:jar:4.1.0:test
[INFO] \- io.github.openfeign:feign-micrometer:jar:13.6.1:compile
[INFO] BUILD SUCCESS
