src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__filter_fail_caused_by_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[ERROR] Tests run: 5, Failures: 2, Errors: 0, Skipped: 0
[INFO] BUILD FAILURE

[ERROR] Failures:
[ERROR]   com.example.company.EmailParserTest.should_extract_domain_from_email <<< FAILURE!
[ERROR]     AssertionFailedError:
[ERROR]     expected: "broken.example.com"
[ERROR]     but was: "user.example.com"
[ERROR]     at com.example.company.EmailParserTest.should_extract_domain_from_email(EmailParserTest.java:14)
[ERROR]   com.example.integration.DbIntegrationIT.shouldConnect <<< FAILURE!
[ERROR]     IllegalStateException: Failed to load ApplicationContext for [WebMergedContextConfiguration@4c2af006 testClass = com.example.integration.DbIntegrationIT]
[ERROR]     at org.springframework.test.context.cache.DefaultCacheAwareContextLoaderDelegate.loadContext(DefaultCacheAwareContextLoaderDelegate.java:180)
[ERROR]     at org.springframework.test.context.support.DefaultTestContext.getApplicationContext(DefaultTestContext.java:124)
[ERROR]     Caused by: org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'scimUserController' defined in file [/home/user/project/target/classes/com/example/scim/ScimUserCo...
[ERROR]     Caused by: java.lang.IllegalArgumentException: Missing required property 'auth.scim.encryption-key' for company provisioning
