src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__filter_maven4_pass_snapshot.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] Tests run: 13, Failures: 0, Errors: 0, Skipped: 0
[INFO] BUILD SUCCESS
