src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__filter_mvn_multi_compile_failure.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[ERROR] COMPILATION ERROR :
[ERROR] /app/src/test/java/com/example/user/UserServiceTest.java:[42,18] cannot find symbol
[ERROR]   symbol:   method findByEmail(java.lang.String)
[ERROR]   location: interface com.example.user.UserRepository
[ERROR] /app/src/test/java/com/example/user/UserServiceTest.java:[57,9] cannot find symbol
[ERROR]   symbol:   variable log
[ERROR]   location: class com.example.user.UserServiceTest
[INFO] 3 errors
[INFO] BUILD FAILURE
