src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__filter_mvn_multi_keeps_post_footer_failure_cause.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] BUILD FAILURE
[ERROR] Failed to execute goal org.apache.maven.plugins:maven-compiler-plugin:3.15.0:compile (default-compile) on project example-app: Fatal error compiling: error: release version 99 not supported -> [Help 1]
