src/cmds/jvm/snapshots/rtk__cmds__jvm__mvn_cmd__tests__filter_mvn_multi_success.snap
---
source: src/cmds/jvm/mvn_cmd.rs
expression: output
---
[INFO] /app/src/test/java/com/example/security/saml/SamlAdGroupProcessorTest.java: uses unchecked or unsafe operations.
[INFO] /app/src/test/java/com/example/security/saml/SamlAdGroupProcessorTest.java: Recompile with -Xlint:unchecked for details.
[INFO] You have 0 Checkstyle violations.
[INFO] BUILD SUCCESS
